いいね機能の実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,7 +2,14 @@ ja:
   activerecord:
     models:
       trouble_post: 投稿
+      like: いいね
     attributes:
       trouble_post:
         content: 内容
         user: ユーザー
+      like:
+        user: ユーザー
+        post: 投稿
+  time:
+    formats:
+      default: "%Y年%-m月%-d日(%a) %-H時%-M分%-S秒"
